--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -2,7 +2,7 @@
   - title "Searching Infinite Closet for \"#{@query}\""
   - if @items.empty?
     :markdown
-      We couldn't find any wearables that matched **#{@query}**. Sorry!
+      We couldn't find any wearables that matched **#{h @query}**. Sorry!
 
       Are we missing something? To add an item to our database, just
       [show us a pet who is wearing it][1]. That's it!
